# yquake2pp

./: CMakeLists.txt  README.md  premake5.lua
src/backends/unix/: network.cpp  system.cpp
src/backends/unix/shared/: hunk.cpp
src/backends/windows/: network.cpp  system.cpp
src/backends/windows/shared/: hunk.cpp
src/client/: cl_cin.cpp  cl_keyboard.cpp  cl_parse.cpp  cl_screen.cpp
src/client/curl/: download.cpp  qcurl.cpp
src/client/input/: sdl_input.cpp
src/client/menu/: menu.cpp  qmenu.cpp
src/client/refresh/: ref_shared.h
src/client/refresh/files/: pcx.cpp
src/client/refresh/gl1/: gl1_image.cpp  gl1_lightmap.cpp  gl1_main.cpp  gl1_md2.cpp  gl1_mesh.cpp  gl1_misc.cpp  gl1_model.cpp  gl1_sp2.cpp  gl1_surf.cpp  gl1_warp.cpp
src/client/refresh/gl3/: gl3_image.cpp  gl3_lightmap.cpp  gl3_main.cpp  gl3_md2.cpp  gl3_misc.cpp  gl3_model.cpp  gl3_shaders.cpp  gl3_sp2.cpp  gl3_warp.cpp
src/client/refresh/soft/: sw_draw.cpp  sw_image.cpp  sw_main.cpp  sw_model.cpp  sw_polyset.cpp  sw_sprite.cpp  sw_surf.cpp
src/client/sound/: openal.cpp  qal.cpp  sdl_sound.cpp  sound.cpp
src/client/vid/: glimp_sdl.cpp  vid.cpp
src/client/vid/header/: ref.h
src/common/: argproc.cpp  clientserver.cpp  cmdparser.cpp  collision.cpp  cvar.cpp  filesystem.cpp  frame.cpp  movemsg.cpp  netchan.cpp  szone.cpp  zone.cpp
src/common/header/: common.h  shared.h
src/common/shared/: shared.cpp
src/common/unzip/: ioapi.cpp
src/game/: g_ai.cpp  g_main.cpp  g_misc.cpp  g_spawn.cpp  g_turret.cpp  g_utils.cpp
src/game/header/: game.h
src/game/player/: client.cpp
src/game/savegame/: savegame.cpp
src/game/savegame/tables/: fields.h  gamefunc_decs.h
src/server/: sv_cmd.cpp  sv_game.cpp  sv_init.cpp  sv_send.cpp
src/server/header/: server.h
